// SPDX-License-Identifier: MIT
//
// Copyright (c) 2024 Berachain Foundation
//
// Permission is hereby granted, free of charge, to any person
// obtaining a copy of this software and associated documentation
// files (the "Software"), to deal in the Software without
// restriction, including without limitation the rights to use,
// copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following
// conditions:
//
// The above copyright notice and this permission notice shall be
// included in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
// OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
// WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
// OTHER DEALINGS IN THE SOFTWARE.

syntax = "proto3";
package beacon.core.types.v1;

import "beacon/core/types/v1/deposit.proto";
import "ethereum/engine/v1/execution_engine.proto";
import "ethereum/eth/ext/options.proto";

option go_package = "github.com/itsdevbear/bolaris/beacon/core/types/v1;typesv1";

// BeaconBuoyDeneb represents a beacon kit block during deneb network upgrade.
message BeaconBuoyDeneb {
  // Beacon chain slot that this block represents.
  uint64 slot = 1 [(ethereum.eth.ext.cast_type) = "github.com/itsdevbear/bolaris/primitives.Slot"];

  // 32 byte root of the parent block.
  bytes parent_block_root = 2 [(ethereum.eth.ext.ssz_size) = "32"];

  // BeaconBlockBody contains the body of the beacon block.
  BeaconBuoyBodyDeneb body = 3;

  // The payload value of the block.
  bytes payload_value = 101 [(ethereum.eth.ext.ssz_size) = "32"];
}

// BeaconBuoyBodyDeneb represents the body of a beacon block in Deneb.
message BeaconBuoyBodyDeneb {
  // The validators RANDAO reveal 96 byte value.
  bytes randao_reveal = 1 [(ethereum.eth.ext.ssz_size) = "96"];

  // 32 byte field of arbitrary data. This field may contain any data and
  // is not used for anything other than a fun message.
  bytes graffiti = 2 [(ethereum.eth.ext.ssz_size) = "32"];

  // Deposits from the execution chain, at most MAX_DEPOSITS_PER_BLOCK.
  repeated Deposit deposits = 3 [(ethereum.eth.ext.ssz_max) = "16"];

  // Execution payload from the execution chain. New in Bellatrix network upgrade.
  ethereum.engine.v1.ExecutionPayloadDeneb execution_payload = 4;

  // At most MAX_BLOBS_PER_BLOCK. New in Deneb network upgrade.
  repeated bytes blob_kzg_commitments = 5 [
    (ethereum.eth.ext.ssz_size) = "?,48",
    (ethereum.eth.ext.ssz_max) = "max_blob_commitments.size"
  ];
}
